time for styling and details

--- a/add-event.html
+++ b/add-event.html
@@ -33,10 +33,12 @@
         </section>
 	</main>
 
+ <footer>
+        <p>Developed by: MJ O'Neill&copy;</p>
+                <p>Kubera-Technologies&trade;</p>
 
-  <footer>
-        <p>&copy 2023 LGBTQ Events</p>
     </footer>
+
 	<script src="scripts/maps.js"> </script>
 	<script src="scripts/events.js"></script>
 </body>
