--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <title>PrideConnections</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
-    <header>
+<body class="background-img">
+
+                                <!--    HEADER SECTION -->
+    
         <h1>PrideConnections</h1>
+         <header id="logo" class="site-header">
+        <div class="site-identity">
+            <img id="logo" class="img" src="images/ " alt="prideconnections" />
+        </div>
         <nav>
             <ul>
-                <li><a href="#">About</a></li>
+                <li><a href="index-landing_papge.html">About</a></li>
 				<li><a href="add-event.html">Add-Event</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+
+                                    <!--  BODY -->
+    <main class="content">
         <section id="events-list">
             <h2>Upcoming Events</h2>
             <label for="event-search">Search Events:</label>
@@ -25,12 +33,14 @@
                 <!-- search results will appear here -->
             </ul>
         </section>
-
-      
     </main>
-
-    <footer>
-        <p>&copy LGBTQ Events</p>
+<hr />
+                                      <!-- FOOTER SECTION-->
+    <footer class="site-footer">
+    <div class="copyright-text">
+        <p>Developed by: MJ O'Neill&copy;</p>
+                <p>Kubera-Technologies&trade;</p>
+</div>
     </footer>
 
 
