--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>PrideConnections</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body class="background-img">
+<body>
 
                                 <!--    HEADER SECTION -->
     
-        <h1>PrideConnections</h1>
          <header id="logo" class="site-header">
         <div class="site-identity">
-            <img id="logo" class="img" src="images/ " alt="prideconnections" />
+                <h1>PrideConnections</h1>
+
         </div>
         <nav>
             <ul>
@@ -42,7 +42,6 @@
                 <p>Kubera-Technologies&trade;</p>
 </div>
     </footer>
-
 
     <script src="scripts/maps.js"> </script>
     <script src="scripts/events.js"></script>
